<resources>
    <string name="app_name">Intent and Activity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_register">Belum punya akun? Register</string>
    <string name="Fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun_login">Sudah punya akun? Login</string>
    <string name="get_started">Get Started</string>
    <string name="pameraan">pameraan</string>
    <string name="welcome_to">Welcome to</string>
    <string name="halooo">Halooo</string>
    <string name="login">Login</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="jelajahi">Jelajahi</string>
    <string name="posting_karya">Posting Karya</string>
    <string name="harga">Harga</string>
    <string name="judul_karya">Judul Karya</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="keterangan_karya">Keterangan Karya</string>
    <string name="keterangan">Keterangan</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_karya">Harga Karya</string>
    <string name="lokasi">Lokasi</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="posting">Posting</string>
    <string name="i_nyoman_danu_daksawan_randysmara">I Nyoman Danu Daksawan Randysmara</string>
    <string name="danudaksawan">danudaksawan</string>
    <string name="change_photo">Change Photo</string>
    <string name="name">Name</string>
    <string name="username_editprofil">Username</string>
    <string name="bio_editprofil">Bio</string>
    <string name="location_editprofil">Location</string>
    <string name="btn_save">Save</string>
    <string name="kursi_kayu">Kursi Kayu</string>
    <string name="img_pilihproduk_jumlahkursi">Jumlah</string>
    <string name="tambahkan_ke_keranjang">Tambahkan ke Keranjang</string>
    <string name="transaksi">Transaksi</string>
    <string name="btn_tambah_transaksi">Tambah Transaksi</string>
    <string name="keranjang_saya">Keranjang Saya</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="rp_329_000">Rp 329.000</string>
    <string name="_0">0</string>
    <string name="sedang_mencoba_berkarya">sedang mencoba berkarya</string>
    <string name="bali_indonesia">| Bali, Indonesia</string>
    <string name="_1_karya_12_pengikut_20_mengikuti">1 Karya | 12 Pengikut | 20 Mengikuti</string>
    <string name="change_account">Change Account</string>
    <string name="logout">Logout</string>
    <string name="deskripsi_transaksi">Deskripsi Transaksi</string>
    <string name="tanggal_transaksi">Tanggal Transaksi</string>
    <string name="jumlah_transaksi">Jumlah Transaksi</string>
    <string name="jumlah_1">Jumlah: 1</string>
    <string name="total_rp_329_000">Total: Rp 329.000</string>
    <string name="jumlah_pesanan">Jumlah Pesanan</string>
    <string name="harga_pesanan">Harga Pesanan</string>
    <string name="pajak">Pajak</string>
    <string name="total_harga">Total Harga</string>
    <string name="total_biayaharga">Rp 361.900</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="hargapajak">Rp 32.900</string>
    <string name="hargapesanan">Rp 329.000</string>
    <string name="telepon">Telepon</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="cart">Cart</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_image">Select Image</string>
    <string name="space" />
    <string name="log_out">LOG OUT</string>
    <string name="belum_ada_karya">Belum Ada Karya</string>
    <string name="todo">TODO</string>
    <string name="itemkarya">itemkarya</string>
    <string name="cari_karya">Cari karya</string>
    <string name="cari">Cari</string>
    <string name="back">Back</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="keranjang_saya_title">Keranjang Saya</string>
</resources>