<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".TambahKaryaActivity">

        <ImageView
            android:id="@+id/btnback_tambahkarya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tombolx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/posting_karya"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/garisbawah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/garisbawah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnback_tambahkarya"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/tambahgambar"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/tambahgambar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/garisbawah"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/judulkarya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font"
            android:layout_marginTop="12dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/judul_karya"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tambahgambar"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/deskripsi"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/judulkarya"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/tvketerangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/keterangan_karya"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deskripsi" />

        <EditText
            android:id="@+id/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/keterangan"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvketerangan"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/jumlah"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keterangan"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/tvharga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/harga_karya"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jumlah" />

        <EditText
            android:id="@+id/harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/harga"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvharga"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/tvlokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lokasi"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/harga" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/alamat"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvlokasi"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/kota"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alamat"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonroundedfull"
            android:hint="@string/provinsi"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kota"
            tools:ignore="Autofill,DuplicateIds,TextFields" />

        <Button
            android:id="@+id/btnposting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/solidbutton"
            android:text="@string/posting"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/provinsi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>