<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-320dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="411dp"
        android:text="@string/welcome_to"
        android:textColor="@color/primary"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="392dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pameraan"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/button"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>