<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primary"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="443dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="291dp"
        android:layout_marginBottom="-3dp"
        android:src="@drawable/putih"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="368dp"
        android:layout_height="326dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-102dp"
        android:layout_marginBottom="405dp"
        android:src="@drawable/transparan"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="537dp"
        android:src="@drawable/splash1"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="149dp"
        android:layout_marginBottom="388dp"
        android:src="@drawable/splash1"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="241dp"
        android:background="@drawable/buttonroundedfull"
        android:hint="@string/email"
        android:paddingHorizontal="10dp"
        android:autofillHints="password"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="195dp"
        android:background="@drawable/buttonroundedfull"
        android:hint="@string/password"
        android:paddingHorizontal="10dp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="332dp"
        android:background="@drawable/buttonroundedfull"
        android:hint="@string/Fullname"
        android:paddingHorizontal="10dp"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="286dp"
        android:background="@drawable/buttonroundedfull"
        android:hint="@string/username"
        android:paddingHorizontal="10dp"
        android:autofillHints="username"
        android:inputType="text" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="102dp"
        android:background="@drawable/solidbutton"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/buttontransparan"
        android:text="@string/sudah_punya_akun_login"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>